# IN4110-assignments

./: README.md  http_cache.sqlite
assignment1/: friendly_greeting.txt  gitconflict.txt
assignment2/: analyze_pollution_data.py
assignment2/analytic_tools/: utilities.py
assignment2/playground-path/: play.py
assignment2/tests/: test_utilities.py
assignment3/: README.md  profile-report.md  pyproject.toml  timing-report.txt
assignment3/in3110_instapy/: cli.py  cython_filters.py  numba_filters.py  numpy_filters.py  profiling.py  python_filters.py  timing.py
assignment3/test/: test_cython.py  test_numba.py  test_numpy.py  test_python.py
assignment4/: collect_dates.py  fetch_olympic_statistics.py  filter_urls.py  find_anniversaries.py  requesting_urls.py  wiki_race_challenge.py
assignment4/olympic_games_results/: best_of_sport_by_Gold.md
assignment5/: README.md  app.py  http_cache.sqlite  strompris.py
assignment5/docs/: conf.py  index.rst  strompris.rst
assignment5/docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree  strompris.doctree
assignment5/docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  strompris.html
assignment5/docs/_build/html/_sources/: api.rst.txt
assignment5/templates/: strompris.html
